ci(workflows): fix workflows in update bug report template

--- a/.github/workflows/repository-templates/bug_report.yml.j2
+++ b/.github/workflows/repository-templates/bug_report.yml.j2
@@ -16,7 +16,7 @@ body:
       options:
       {% set component_list = components.split(' ') %}
       {% for component in component_list %}
-        - "{{ component }}"
+        - {{ component }}
       {% endfor %}
     validations:
       required: true
@@ -30,7 +30,7 @@ body:
       options:
       {% set version_list = versions.split(' ') %}
       {% for version in version_list %}
-        - "{{ version }}"
+        - {{ version }}
       {% endfor %}
     validations:
       required: true
