--- a/.github/workflows/repository-templates/bug_report.yml.j2
+++ b/.github/workflows/repository-templates/bug_report.yml.j2
@@ -14,10 +14,10 @@ body:
       description: Effected component
       multiple: true
       options:
-      {% set component_list = components.split(' ') %}
-      {% for component in component_list %}
+      {% set components = components.split(',') | list() -%}
+      {% for component in components -%}
         - {{ component }}
-      {% endfor %}
+      {% endfor -%}
     validations:
       required: true
 
@@ -28,10 +28,10 @@ body:
       description: Effected version
       multiple: false
       options:
-      {% set version_list = versions.split(' ') %}
-      {% for version in version_list %}
+      {% set versions = versions.split(',') | list() -%}
+      {% for version in versions -%}
         - {{ version }}
-      {% endfor %}
+      {% endfor -%}
     validations:
       required: true
 
