--- a/.github/workflows/repository-templates/SUPPORT.md.j2
+++ b/.github/workflows/repository-templates/SUPPORT.md.j2
@@ -1,7 +1,8 @@
-{%- set repository_name = repository_name.replace("_", "-").lower() %}
+{%- set repository_name = repository_name.replace("_", "-").lower() -%}
+{%- set repository_title_name = repository_name.replace(" ", "_").replace("-", " ").title() -%}
 # Support
 
-First of all, we are very happy that your are using Github Actions Workflows.
+First of all, we are very happy that your are using **{{ repository_title_name }}**.
 We hope that there are no questions related to its use.
 But if you have any questions.
 
@@ -24,4 +25,4 @@ visible.
 To save your and our time, we will systematically close all issues that are
 requests for general support and redirect people to Stack Overflow.
 
-Thank you for your cooperation.
+*Thank you for your cooperation.*
