feat(workflows): change to emoji symbols in security.md

--- a/.github/workflows/repository-templates/SECURITY.md.j2
+++ b/.github/workflows/repository-templates/SECURITY.md.j2
@@ -2,10 +2,10 @@
 
 ## Supported Versions
 
-| Version   | Supported          |
-| --------- | ------------------ |
-| {{ latest_version }}   | :white_check_mark: |
-| <{{ latest_version }}  | :x:                |
+| Version  | Supported |
+| -------- | --------- |
+| {{ latest_version }}  | ✔️         |
+| <{{ latest_version }} | ❌        |
 
 ## Reporting a Vulnerability
 
